changed mobile logo
changed the width of the mobile logo to fit to vw

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section id="abtus1" class="sec2 scroll-area">
           <div class="container pt-5">
-            <div class="ms-4 mt-4 w-auto fixed-top" style="z-index: 1">
+            <div class="ms-4 mt-4 fixed-top" style="z-index: 1; width: 5vw">
               <a href="#wlc"><img src="./images/rsz_group_1_1_.png" /> </a>
             </div>
 
