--- a/index.html
+++ b/index.html
@@ -146,13 +146,36 @@
           </div>
         </section>
         <section class="sec3" id="pkgs1" style="z-index: 0">
-          <div class="container-fluid m-auto" style="padding-left: 0; padding-right: 0">
+          <!--<div class="container-fluid m-auto" style="padding-left: 0; padding-right: 0"> 
             <div
               class="swiper mySwiper position-relative"
               style="top: 20vw; bottom: 0; left: 0; right: 0">
               <div class="swiper-wrapper mt-5">
-                <div class="swiper-slide mt-5 text-center">
-                  <img src="./images/sunpkgs.svg" />
+                <div class="swiper-slide mt-5">
+                  <div class="row position-relative">
+                    <div
+                      class="col-auto ms-lg-5 position-absolute"
+                      style="left: 0; right: 0; top: 0; bottom: 0">
+                      <div class="text-center">
+                        <img src="./images/Layer 3.png" style="width: 30" />
+                      </div>
+                      <h3 class="pkgs pb-3 text-center" id="txtdown">SUN PACKAGE</h3>
+                      <div class="offset-md-4 offset-2">
+                        <div class="bullet">
+                          <p class="underline offers">Illustration</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Visual Development</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Storyboards</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Branding | Web Design</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
                 <div class="swiper-slide mt-5 text-center">
@@ -164,7 +187,7 @@
               </div>
               <div class="swiper-pagination"></div>
             </div>
-          </div>
+          </div>-->
         </section>
         <section class="sec4" id="cntct1" style="z-index: 0">
           <div class="container-fluid m-auto">
@@ -274,7 +297,7 @@
             <!-- Page Links -->
             <div class="navbar-nav mx-auto">
               <div class="ms-lg-5 d-inline-flex">
-                <a href="#abtus" onclick="next()" style="color: transparent">About usss</a>
+                <a href="#abtus" onclick="next()" style="color: transparent">About us</a>
                 <a class="nav-link le nav-hover" href="#abtus" onclick="next()">About us</a>
 
                 <a class="navbullet nav-link disabled ms-3 me-3" href="#"></a>
@@ -298,25 +321,25 @@
                 class="nav-link active nav-hover"
                 href="mailto: info.sunnymoonproject@gmail.com"
                 target="_blank"
-                ><img src="./images/email (2).png" role="img" width="23"
+                ><img src="./images/email (2).png" role="img" width="18"
               /></a>
               <a
                 class="nav-link active nav-hover"
                 href="https://www.instagram.com/sunnymoon.project/"
                 target="_blank"
-                ><img src="./images/insta.svg" role="img" width="20"
+                ><img src="./images/insta.svg" role="img" width="15"
               /></a>
               <a
                 class="nav-link active nav-hover"
                 href="https://twitter.com/SunnyMoonPrj"
                 target="_blank"
-                ><img src="./images/twitter.svg" role="img" width="20"
+                ><img src="./images/twitter.svg" role="img" width="15"
               /></a>
               <a
                 class="nav-link active nav-hover"
                 href="https://www.linkedin.com/company/sunnymoon-project/"
                 target="_blank"
-                ><img src="./images/linkedin.svg" role="img" width="20"
+                ><img src="./images/linkedin.svg" role="img" width="15"
               /></a>
               <a
                 class="nav-link active nav-hover"
@@ -424,20 +447,13 @@
           </div>
           <div class="container-fluid">
             <div
-              class="row sets position-relative offset-md-1 offset-xxl-2"
-              style="top: 65px; bottom: 0; left: 0px; right: 0">
-              <div class="col-3 ms-4 text-center position-relative mb-4">
-                <img src="./images/Layer 3.png" style="width: 30%" />
-              </div>
-              <div class="col-3 text-center position-relative" style="margin-left: 80px">
-                <img src="./images/Layer 5.png" style="width: 25%" />
-              </div>
-              <div class="col-3 text-center position-relative" style="margin-left: 60px">
-                <img src="./images/Layer 4.png" style="width: 30%" />
-              </div>
-
-              <div class="col-auto ms-lg-5">
-                <h3 class="pkgs pb-3 ms-lg-5" id="txtdown">SUN PACKAGE</h3>
+              class="row sets sets1 position-relative m-0 p-0"
+              style="top: 50px; bottom: 0; left: 100px; right: 0">
+              <div class="col-auto sets1 ms-xl-5 ms-xxl-0">
+                <div class="ms-4 text-center position-relative">
+                  <img src="./images/Layer 3.png" style="width: 30%" />
+                </div>
+                <h3 class="pkgs pb-3 ms-5" id="txtdown">SUN PACKAGE</h3>
                 <div class="ms-5">
                   <div class="bullet pb-2">
                     <p class="underline offers">Illustration</p>
@@ -455,10 +471,13 @@
               </div>
               <div
                 class="col-auto text-center position-relative ms-2 me-2"
-                style="width: auto; opacity: 0.7; bottom: 30px">
+                style="width: auto; opacity: 0.7; top: 2vw">
                 <img src="./images/Line 51.png" style="width: auto; height: 70%" />
               </div>
               <div class="col-auto">
+                <div class="text-center position-relative">
+                  <img src="./images/Layer 5.png" style="width: 26%" />
+                </div>
                 <h3 class="pb-3 pkgs" id="txtdown1">MOON PACKAGE</h3>
                 <div>
                   <div class="bullet pb-2">
@@ -478,12 +497,15 @@
 
               <div
                 class="col-auto position-relative ms-2 me-2"
-                style="width: auto; opacity: 0.7; bottom: 30px">
+                style="width: auto; opacity: 0.7; top: 2vw">
                 <img src="./images/Line 51.png" style="width: auto; height: 70%" />
               </div>
               <div class="col-auto">
+                <div class="ms-4 text-center position-relative">
+                  <img src="./images/Layer 4.png" style="width: 34%" />
+                </div>
                 <h3 class="pb-3 pkgs">ECLIPSE PACKAGE</h3>
-                <div id="offrsup2">
+                <div id="pb-5">
                   <div class="pb-5 position-relative">
                     <div class="bullet pb-2">
                       <p class="underline offers">Character Design</p>
@@ -501,6 +523,7 @@
                 </div>
               </div>
             </div>
+
             <div class="row">
               <div class="col pb-5 text-center position-relative">
                 <button class="button-18" role="button">View our work on Behance</button>
