--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
         <nav class="navbar fixed-top bg-transparent">
           <ul class="nav-menu">
             <div class="row mt-5 mb-1 position-relative">
-              <a href="#wlc1" class="w-auto m-auto mt-5" onclick="tab()"
+              <a href="#wlc1" class="w-auto m-auto mt-5 pb-5" onclick="tab()"
                 ><img class="w-auto m-auto" src="./images/Group 1.png"
               /></a>
             </div>
-            <li class="nav-item">
+            <li class="nav-item pb-4">
               <a href="#abtus1" class="nav-link" onclick="tab()">About us</a>
             </li>
-            <br />
-            <li class="nav-item">
+
+            <li class="nav-item pb-4">
               <a href="#pkgs1" class="nav-link" onclick="tab()">Packages</a>
             </li>
-            <br />
-            <li class="nav-item">
+
+            <li class="nav-item pb-4">
               <a href="https://www.behance.net/sunnymoonproject" class="nav-link" onclick="tab()"
                 >Our work</a
               >
             </li>
-            <br />
-            <li class="nav-item">
+
+            <li class="nav-item pb-4">
               <a href="#cntct1" class="nav-link" onclick="tab()">Contact us</a>
             </li>
           </ul>
@@ -84,40 +84,41 @@
 
         <section id="abtus1" class="sec2 scroll-area">
           <div class="container pt-5">
-            <div class="ms-4 mt-4 fixed-top" style="z-index: 1; width: 5vw">
-              <a href="#wlc"><img src="./images/rsz_group_1_1_.png" /> </a>
+            <div class="ms-4 mt-4 fixed-top" style="z-index: 1">
+              <a href="#wlc"><img src="./images/rsz_group_1_1_.png" height="60em" /> </a>
             </div>
 
             <div class="row text-center">
-              <div class="col-auto text-center mt-3 mt-md-5 position-relative" style="top: 3rem">
-                <div class="mt-5 mt-md-5">
-                  <h3 class="text1 pb-2">WHO WE ARE</h3>
-                  <p class="text2 col-10 position-relative" style="left: 2.5rem">
-                    We are two sisters with a rich experience in the market, especially in gaming
-                    and animation. We work with several tasks such as visual development, concept
-                    art, character design,graphic design, branding, and social media.
+              <div class="text-center mt-3 mt-md-5 position-relative" style="top: 3rem">
+                <div class="mt-5 mt-md-5 text-center">
+                  <h3 class="text1 text-center pb-2">WHO WE ARE</h3>
+                  <p class="text2 col-auto text-center position-relative" style="left: 0.5rem">
+                    We are two sisters with a rich experience in the market, <br />especially in
+                    gaming and animation. We work with several <br />tasks such as visual
+                    development, concept art, character<br />
+                    design, graphic design, branding, and social media.
                   </p>
-                  <p class="text2 p-1 mt-3 mb-5">
+                  <p class="text2 col-auto text-center p-1 mt-3 mb-5">
                     <span style="font-style: italic">Yes, we do everything!</span>
                   </p>
                 </div>
               </div>
             </div>
             <div class="row mt-4">
-              <div class="col text-center w-100">
-                <img src="./images/star2.svg" width="auto" />
+              <div class="col text-center w-100 pb-2">
+                <img src="./images/star2.svg" width="25%" />
               </div>
             </div>
           </div>
           <div class="row mt-3 text-center position-relative" style="left: 0.5rem">
             <div class="col">
-              <img src="./images/255 1.svg" width="90" />
+              <img src="./images/255 1.svg" width="50%" />
             </div>
             <div class="col mt-1">
-              <img src="./images/2 1.svg" width="70" />
+              <img src="./images/2 1.svg" width="40%" />
             </div>
             <div class="col">
-              <img src="./images/1 dog.svg" width="70" />
+              <img src="./images/1 dog.svg" width="40%" />
             </div>
           </div>
           <div
@@ -146,16 +147,14 @@
           </div>
         </section>
         <section class="sec3" id="pkgs1" style="z-index: 0">
-          <!--<div class="container-fluid m-auto" style="padding-left: 0; padding-right: 0"> 
+          <div class="container-fluid m-auto" style="padding-left: 0; padding-right: 0">
             <div
               class="swiper mySwiper position-relative"
-              style="top: 20vw; bottom: 0; left: 0; right: 0">
+              style="top: 12vw; bottom: 0; left: 0; right: 0; width: 100%">
               <div class="swiper-wrapper mt-5">
-                <div class="swiper-slide mt-5">
-                  <div class="row position-relative">
-                    <div
-                      class="col-auto ms-lg-5 position-absolute"
-                      style="left: 0; right: 0; top: 0; bottom: 0">
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div>
                       <div class="text-center">
                         <img src="./images/Layer 3.png" style="width: 30" />
                       </div>
@@ -177,87 +176,135 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="swiper-slide mt-5 text-center">
-                  <img src="./images/Group 143.svg" />
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div
+                      class="col-auto ms-lg-5 position-absolute"
+                      style="left: 0; right: 0; top: 0; bottom: 0">
+                      <div class="text-center">
+                        <img src="./images/Layer 5.png" style="width: 30" />
+                      </div>
+                      <h3 class="pkgs pb-3 text-center" id="txtdown">MOON PACKAGE</h3>
+                      <div class="offset-md-4 offset-2">
+                        <div class="bullet">
+                          <p class="underline offers">3D Outfit Mockups</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Character Outfit Dev</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Gaame Assets</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Animation</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="swiper-slide mt-5 text-center">
-                  <img src="./images/Group 146.svg" />
+                <div class="swiper-slide">
+                  <div class="row">
+                    <div
+                      class="col-auto ms-lg-5 position-absolute"
+                      style="left: 0; right: 0; top: 0; bottom: 0">
+                      <div class="text-center">
+                        <img src="./images/Layer 4.png" style="width: 30" />
+                      </div>
+                      <h3 class="pkgs pb-3 text-center" id="txtdown">ECLIPSE PACKAGE</h3>
+                      <div class="offset-md-4 offset-2">
+                        <div class="bullet">
+                          <p class="underline offers">Character Design</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Concept Art</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Storytelling</p>
+                        </div>
+                        <div class="bullet">
+                          <p class="underline offers">Environment Art</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
-          </div>-->
+          </div>
         </section>
         <section class="sec4" id="cntct1" style="z-index: 0">
           <div class="container-fluid m-auto">
-            <div class="row pt-5" id="crt2">
+            <div
+              class="row pt-5 position-relative"
+              id="crt2"
+              style="top: 4m; bottom: 0; left: 0; right: 0">
               <div class="col mt-5 mb-3" style="line-height: 1rem">
                 <p class="mt-5">
                   <span class="crth1">CREATE WITH US</span><br />
                   <span class="crth2">BOOK A FREE CONSULTATION</span><br />
                 </p>
               </div>
-            </div>
-            <div class="mt-2">
-              <form
-                name="contactmobile"
-                method="POST"
-                data-netlify="true"
-                onsubmit="submt1()"
-                onSubmit="submit"
-                id="frm1">
-                <!-- Name input -->
 
-                <div class="row mb-3">
-                  <div class="col-10">
-                    <input
-                      name="name"
-                      type="text"
-                      class="form-control"
-                      placeholder="NAME"
-                      style="border-radius: 20px; width: 20rem; outline: none" />
-                  </div>
-                </div>
-                <div class="row mb-3">
-                  <div class="col-10">
-                    <input
-                      name="email"
-                      type="email"
-                      class="form-control"
-                      placeholder="EMAIL"
-                      style="
-                        border-radius: 20px;
-                        font-family: 'Lato';
-                        width: 20rem;
-                        outline: none;
-                      " />
-                  </div>
-                </div>
+              <div class="mt-2">
+                <form
+                  name="contactmobile"
+                  method="POST"
+                  data-netlify="true"
+                  onsubmit="submt1()"
+                  onSubmit="submit"
+                  id="frm1">
+                  <!-- Name input -->
 
-                <!-- Message input -->
-                <div class="row">
-                  <div class="form-outline">
-                    <textarea
-                      name="message"
-                      class="form-control"
-                      style="
-                        resize: none;
-                        height: 10rem;
-                        width: 23rem;
-                        border-radius: 20px;
-                        outline: none;
-                      "
-                      rows="1"
-                      placeholder="WRITE TO US..."></textarea>
+                  <div class="row mb-3">
+                    <div class="col-10">
+                      <input
+                        name="name"
+                        type="text"
+                        class="form-control"
+                        placeholder="NAME"
+                        style="border-radius: 20px; width: 15rem; outline: none" />
+                    </div>
                   </div>
-                </div>
-                <!-- Submit button -->
-                <div class="row text-center justify-content-center">
-                  <button type="submit" class="btn mb-4 sbmt">SEND</button>
-                </div>
-              </form>
+                  <div class="row mb-3">
+                    <div class="col-10">
+                      <input
+                        name="email"
+                        type="email"
+                        class="form-control"
+                        placeholder="EMAIL"
+                        style="
+                          border-radius: 20px;
+                          font-family: 'Lato';
+                          width: 15rem;
+                          outline: none;
+                        " />
+                    </div>
+                  </div>
 
+                  <!-- Message input -->
+                  <div class="row">
+                    <div class="form-outline">
+                      <textarea
+                        name="message"
+                        class="form-control"
+                        style="
+                          resize: none;
+                          height: 10rem;
+                          width: 20em;
+                          border-radius: 20px;
+                          outline: none;
+                        "
+                        rows="1"
+                        placeholder="WRITE TO US..."></textarea>
+                    </div>
+                  </div>
+                  <!-- Submit button -->
+                  <div class="row text-center justify-content-center">
+                    <button type="submit" class="btn mb-4 sbmt">SEND</button>
+                  </div>
+                </form>
+              </div>
               <div
                 class="row tnku position-relative text-center"
                 style="line-height: 20px; top: 18em"
@@ -368,14 +415,13 @@
             <a href="#wlc"><span class="arrow1"></span></a>
           </div>
 
-          <div class="container position-relative mt-5">
-            <div class="row mt-5 ms-5 frame" style="padding-top: 40px">
-              <div class="col-auto col-sm-auto col" style="margin-left: 120px">
+          <div class="container-fluid position-relative mt-5">
+            <div class="row mt-5 ms-5 frame" style="padding-top: 70px">
+              <div class="col-auto" style="margin-left: 15vw">
                 <h3 class="text1 pb-2">WHO WE ARE</h3>
                 <p class="text2 p-1">
-                  We are two sisters who come from a similar
-                  <br />
-                  background of love for everything creative and magical.
+                  We are two sisters who come from a similar background <br />
+                  of love for everything creative and magical.
                 </p>
                 <p class="text2 p-1">
                   We aim to deliver your stories with interesting
@@ -388,10 +434,10 @@
                   element to your project.
                 </p>
               </div>
-              <div class="col-auto col-sm-auto d-no p-0 ms-3 me-3">
+              <div class="col-auto frame1 col-sm-auto p-0 ms-3 me-3">
                 <img src="./images/Group 30.png" width="70" />
               </div>
-              <div class="col-4 p-0 ms-5">
+              <div class="col-auto p-0 ms-5">
                 <h3 class="text1 pb-2">THE TEAM</h3>
                 <div class="pb-5 position-relative">
                   <p class="text2 pb-4">
@@ -408,8 +454,8 @@
               </div>
             </div>
 
-            <div class="row ms-5 mb-5 col-sm-auto frame1 text-center">
-              <div class="col-auto col-sm-1 offset-md-1 col-md-4 d-no">
+            <div class="row mb-5 frame1 text-center">
+              <div class="col-auto offset-md-1 col-md-4 d-no">
                 <img src="./images/Group 33.svg" width="100" />
               </div>
               <div class="col col-md-2 mt-1 mb-5 d-no">
@@ -448,9 +494,9 @@
           <div class="container-fluid">
             <div
               class="row sets sets1 position-relative m-0 p-0"
-              style="top: 50px; bottom: 0; left: 100px; right: 0">
+              style="top: 0vw; bottom: 0; left: 9vw; right: 0">
               <div class="col-auto sets1 ms-xl-5 ms-xxl-0">
-                <div class="ms-4 text-center position-relative">
+                <div class="ms-4 text-center position-relative pb-2">
                   <img src="./images/Layer 3.png" style="width: 30%" />
                 </div>
                 <h3 class="pkgs pb-3 ms-5" id="txtdown">SUN PACKAGE</h3>
@@ -471,12 +517,12 @@
               </div>
               <div
                 class="col-auto text-center position-relative ms-2 me-2"
-                style="width: auto; opacity: 0.7; top: 2vw">
+                style="width: auto; opacity: 0.7; top: 3vw">
                 <img src="./images/Line 51.png" style="width: auto; height: 70%" />
               </div>
               <div class="col-auto">
-                <div class="text-center position-relative">
-                  <img src="./images/Layer 5.png" style="width: 26%" />
+                <div class="text-center position-relative pb-2">
+                  <img src="./images/Layer 5.png" style="width: 24%" />
                 </div>
                 <h3 class="pb-3 pkgs" id="txtdown1">MOON PACKAGE</h3>
                 <div>
@@ -497,12 +543,12 @@
 
               <div
                 class="col-auto position-relative ms-2 me-2"
-                style="width: auto; opacity: 0.7; top: 2vw">
+                style="width: auto; opacity: 0.7; top: 3vw">
                 <img src="./images/Line 51.png" style="width: auto; height: 70%" />
               </div>
               <div class="col-auto">
-                <div class="ms-4 text-center position-relative">
-                  <img src="./images/Layer 4.png" style="width: 34%" />
+                <div class="ms-4 pb-2 text-center position-relative">
+                  <img src="./images/Layer 4.png" style="width: 30%" />
                 </div>
                 <h3 class="pb-3 pkgs">ECLIPSE PACKAGE</h3>
                 <div id="pb-5">
@@ -524,8 +570,8 @@
               </div>
             </div>
 
-            <div class="row">
-              <div class="col pb-5 text-center position-relative">
+            <div class="row position-absolute" style="left: 0; right: 0">
+              <div class="col text-center">
                 <button class="button-18" role="button">View our work on Behance</button>
               </div>
             </div>
