--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                           <p class="underline offers">Character Outfit Dev</p>
                         </div>
                         <div class="bullet">
-                          <p class="underline offers">Gaame Assets</p>
+                          <p class="underline offers">Game Assets</p>
                         </div>
                         <div class="bullet">
                           <p class="underline offers">Animation</p>
