--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <section id="wlc1" class="sec1 scroll-area" style="z-index: 10">
           <div class="container pt-1">
             <div class="row intro">
-              <div class="row w-auto m-auto">
-                <img src="./images/Group_1_1_.png" width="20%" />
+              <div class="row w-50 m-auto">
+                <img src="./images/Group_1_1_.png" />
               </div>
               <div class="row w-auto m-auto">
                 <p style="line-height: 2.5rem; margin-top: 3rem">
