mobile font sizes adjusments

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
       <div class="scroll-container">
         <section id="wlc1" class="sec1 scroll-area" style="z-index: 10">
-          <div class="container pt-1">
+          <div class="container">
             <div class="row intro">
-              <div class="row w-50 m-auto">
+              <div class="row w-auto m-auto">
                 <img src="./images/Group_1_1_.png" />
               </div>
               <div class="row w-auto m-auto">
-                <p style="line-height: 2.5rem; margin-top: 3rem">
+                <p style="line-height: 2rem; margin-top: 3rem">
                   <span class="wlc">WELCOME</span> <br /><span class="take">TAKE THE JOURNEY</span>
                 </p>
                 <p class="come">COME EXPLORE THE MAGIC <br />WITHIN OUR CREATIVE STUDIO</p>
@@ -111,14 +111,14 @@
             </div>
           </div>
           <div class="row mt-3 text-center position-relative" style="left: 0.5rem">
-            <div class="col">
-              <img src="./images/255 1.svg" width="50%" />
+            <div class="col w-100">
+              <img src="./images/255 1.svg" width="73%" />
             </div>
-            <div class="col mt-1">
-              <img src="./images/2 1.svg" width="40%" />
+            <div class="col w-100">
+              <img src="./images/2 1.svg" width="60%" />
             </div>
-            <div class="col">
-              <img src="./images/1 dog.svg" width="40%" />
+            <div class="col w-100">
+              <img src="./images/1 dog.svg" width="60%" />
             </div>
           </div>
           <div
